KUYAMWEB-4182: Alignment UI issue

--- a/content/style.css
+++ b/content/style.css
@@ -252,7 +252,7 @@ body{margin:0;padding:0;font:20px/24px raleway, sans-serif;color:#000000;}
 
 .event-block{height:134px;border:1px solid #c9c9c9;margin-bottom:20px;position:relative;}
 .event-block:hover{border:1px solid #999;}
-.event-block .avatar{float:left;width:140px;height:130px;margin:0 10px 0 0;overflow:hidden;}
+.event-block .avatar{float:left;width:140px;height:132px;margin:0 10px 0 0;overflow:hidden;}
 .event-block .iName{margin-bottom:3px;}
 .event-block .iName a{color:#333333;text-decoration:none;font:400 17px/20px raleway, sans-serif;}
 .event-block .iAddress{color:#96BE3D;font:400 14px/17px raleway, sans-serif;}
@@ -513,9 +513,10 @@ body{margin:0;padding:0;font:20px/24px raleway, sans-serif;color:#000000;}
 .company-info ul li{float:right;list-style-type:disc;margin:0 0 0 20px;}
 .company-info ul li:last-child{list-style-type:none;margin:0;}
 
+.modal-header .close{font:500 30px/12px raleway,sans-serif;color:#ffffff;opacity:1;filter:alpha(opacity=100);-webkit-border-radius:100%;-moz-border-radius:100%;border-radius:100%;width:25px;height:25px;margin:-28px -26px 0 0;background:#ffffff;text-shadow:none;}
+
 .modal-details .modal-content{-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;}
 .modal-details .modal-header{font:400 16px/20px raleway,sans-serif;color:#ffffff;}
-.modal-header .close{font:500 30px/12px raleway,sans-serif;color:#ffffff;opacity:1;filter:alpha(opacity=100);-webkit-border-radius:100%;-moz-border-radius:100%;border-radius:100%;width:25px;height:25px;margin:-28px -26px 0 0;background:#ffffff;}
 
 .modal-details .modal-footer{border:0 none;margin:0;}
 .modal-details .modal-footer .package-price{float:left;font:700 25px/45px raleway,sans-serif;}
@@ -533,6 +534,7 @@ body{margin:0;padding:0;font:20px/24px raleway, sans-serif;color:#000000;}
 .modal-class .modal-footer .btn-book{border:0 none;width:auto;padding:0 45px;font:400 18px/44px raleway,sans-serif;}
 
 .modal-form .modal-dialog{width:430px;}
+.modal-form .modal-content{-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;}
 .modal-form .modal-header{text-align:center;border:0 none;padding:15px 25px 10px;}
 .modal-form .modal-header .modal-title{font-weight:700;}
 .modal-form .modal-header .close{color:#333333;border:1px solid #333333;margin:-28px -36px 0 0;}
@@ -545,13 +547,32 @@ body{margin:0;padding:0;font:20px/24px raleway, sans-serif;color:#000000;}
 .modal-form .modal-body .link-form a{color:#96be3d;}
 .modal-form .modal-body .btn-form,
 .modal-form .modal-body .btn-form:hover{border:0 none;font:700 14px/40px raleway,sans-serif;}
-.modal-form .modal-footer{margin:0 35px;padding:15px 0 20px;font:400 14px/18px raleway,sans-serif;}
+.modal-form .modal-footer{border:0 none;margin:0 35px;padding:15px 0 20px;font:400 14px/18px raleway,sans-serif;position:relative;}
+.modal-form hr{border:0 none;border-top:1px solid #ABABAB;border-bottom:1px solid #e5e5e5;margin:0;position:absolute;top:0;right:0;left:0;}
 .modal-form .modal-footer .link-form{color:#ABABAB;}
-.modal-form .modal-footer .link-form a{color:#96be3d;}
+.modal-form .modal-footer .link-form a{color:#96be3d;margin:0 0 0 25px;}
 
 .form-or{text-align:center;position:relative;padding:20px 0;}
-.form-or hr{border:0 none;border-top:1px solid #ABABAB;margin:0;position:absolute;top:50%;right:20px;left:20px;z-index:8;}
+.form-or hr{border:0 none;border-top:1px solid #ABABAB;border-bottom:1px solid #e5e5e5;margin:0;position:absolute;top:50%;right:20px;left:20px;z-index:8;}
 .form-or span{background:#ffffff;display:inline-block;padding:0 20px;position:relative;z-index:9;font:400 14px/18px raleway,sans-serif;}
+
+.modal-terms .modal-dialog{width:700px;}
+.modal-terms .modal-header{padding:0;position:relative;text-align:left;}
+.modal-terms .modal-header .close{background:#333333;color:#ffffff;border:1px solid #ffffff;margin:0;position:absolute;top:-13px;right:-12px;z-index:3;}
+.modal-terms .ui-tabs{padding:0;border:0 none;background:none transparent;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;}
+.modal-terms .ui-tabs-nav{padding:0;border:0 none;background:none #333333;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;}
+.modal-terms .ui-tabs .ui-tabs-nav li{margin:0;width:33.33%;}
+.modal-terms .ui-tabs .ui-tabs-nav .ui-state-default,
+.modal-terms .ui-tabs .ui-tabs-nav .ui-state-hover,
+.modal-terms .ui-tabs .ui-tabs-nav .ui-state-active{background:none transparent;border:0 none;}
+.modal-terms .ui-tabs .ui-tabs-nav .ui-state-default .ui-tabs-anchor{float:none;display:block;padding:30px 0;text-align:center;font:700 20px/24px raleway,sans-serif;color:#ABABAB;}
+.modal-terms .ui-tabs .ui-tabs-nav .ui-state-default .ui-tabs-anchor span{display:block;height:32px;background:url(images/icons/arrow_down_2.png) center center no-repeat;margin:10px 0 0;}
+.modal-terms .ui-tabs .ui-tabs-nav .ui-state-active .ui-tabs-anchor{color:#ffffff;}
+.modal-terms .ui-tabs .ui-tabs-nav .ui-state-active .ui-tabs-anchor span{display:block;height:32px;background:url(images/icons/arrow_down_3.png) center center no-repeat;margin:10px 0 0;}
+.modal-terms .ui-tabs-panel{margin:0 15px;padding:20px 10px;border:2px solid #ABABAB;font:400 16px/20px raleway,sans-serif;overflow-y:auto;}
+.modal-terms .ui-tabs-panel h3{font:700 16px/20px raleway,sans-serif;margin:20px 0 15px;}
+.modal-terms .ui-tabs-panel p{margin:0 0 15px;}
+.modal-terms .ui-tabs-panel .scroll-bar{height:500px;overflow-y:auto;}
 
 @media (min-width:1200px){}
 
@@ -724,6 +745,9 @@ body{margin:0;padding:0;font:20px/24px raleway, sans-serif;color:#000000;}
 	.group_link a{width:18.5%;}	
 	
 	.link-img a{font:400 11px/71px raleway,sans-serif;}
+}
+@media (min-width:768px){
+	.event-block .avatar img{height:132px;}
 }
 @media (max-width:767px){
 	.desktop{display:none !important;}
